[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Test.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Wheel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Spawner.gd" type="Script" id=3]
[ext_resource path="res://Scripts/KillArea.gd" type="Script" id=4]
[ext_resource path="res://Assets/Conveyor/0.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Sprite.gd" type="Script" id=6]
[ext_resource path="res://Assets/Theme.tres" type="Theme" id=7]
[ext_resource path="res://Scripts/Ui.gd" type="Script" id=8]
[ext_resource path="res://Assets/Tmh/StBRd.tres" type="StyleBox" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.966, 22.297 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.3744, 3.01468 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 80, 397.633 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.769444, -0.58379, 960.155, -560.0 ],
"_edit_vertical_guides_": [ 540.518, 260.318, 820.657, 556.928 ]
}

[node name="Wheel" parent="." instance=ExtResource( 2 )]

[node name="Wheel2" parent="." instance=ExtResource( 2 )]
editor/display_folded = true
position = Vector2( 822.465, 960.179 )
scale = Vector2( -1, 1 )

[node name="SpawnArea" type="Node2D" parent="."]
position = Vector2( 32.4009, -32.0056 )
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="SpawnArea"]
position = Vector2( 511.287, -135.668 )
scale = Vector2( 17.6189, 4.48373 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnArea/Area2D"]
position = Vector2( -0.275337, -7.02238 )
shape = SubResource( 1 )

[node name="KillArea" type="Node2D" parent="."]
position = Vector2( 17.2217, 1957.23 )
scale = Vector2( 1, 0.905317 )
script = ExtResource( 4 )

[node name="Conveyor" type="Area2D" parent="KillArea"]
position = Vector2( 542.778, -653.75 )
scale = Vector2( 17.6189, 1.19505 )
gravity_point = true
collision_layer = 2
collision_mask = 64
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillArea/Conveyor"]
position = Vector2( 3.8147e-006, -17.1534 )
scale = Vector2( 1, 1.53904 )
shape = SubResource( 2 )

[node name="Bank" type="Area2D" parent="KillArea"]
position = Vector2( 1118.16, -436.9 )
collision_mask = 65

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillArea/Bank"]
position = Vector2( 24.6183, -46.0579 )
rotation = 0.00947543
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="KillArea/Bank"]
wait_time = 10.0
autostart = true

[node name="ConveyorWheels" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 40, 1380 )
scale = Vector2( 1.25, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="ConveyorWheels"]
position = Vector2( -24, -30.3789 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite8" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 72, -29.9999 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite13" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 168, -29.9999 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite24" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 264, -29.9999 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite27" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 360, -29.9999 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite34" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 456, -29.9999 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite41" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 552, -29.9999 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite45" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 648, -29.9999 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite52" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 744, -29.9999 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="ConveyorWheels"]
position = Vector2( -8, -30 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite9" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 88, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite14" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 184, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite22" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 280, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite30" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 376, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite31" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 472, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite39" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 568, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite44" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 664, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite54" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 760, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite3" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 8, -30 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite12" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 104, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite16" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 200, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite19" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 296, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite25" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 392, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite36" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 488, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite38" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 584, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite43" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 680, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite49" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 776, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite4" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 24, -30 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite10" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 120, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite17" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 216, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite21" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 312, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite28" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 408, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite32" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 504, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite42" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 600, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite46" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 696, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite53" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 792, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite5" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 40, -30 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite7" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 136, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite18" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 232, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite20" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 328, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite26" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 424, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite35" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 520, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite40" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 616, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite47" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 712, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite6" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 56, -30 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite11" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 152, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite15" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 248, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite23" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 344, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite29" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 440, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite33" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 536, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite37" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 632, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Sprite48" type="Sprite" parent="ConveyorWheels"]
position = Vector2( 728, -29.621 )
scale = Vector2( 0.5, 0.625003 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Walls" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 120

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
rotation = 0.00070781
polygon = PoolVector2Array( -0.402039, -467.62, 1.05159, 649.604, 50.6509, 814.25, 7.36761, 971.33, 0.962622, 1360, 1040.96, 1359.26, 1215.62, 1665.38, 1202.06, 1406.12, 1200, 1320, 1200, 1120, 1040.76, 1079.26, 1080.68, 959.235, 1030.44, 795.012, 1077.78, 618.157, 1080.06, 79.2355, 1078.95, -1480.76, 838.952, -1480.59, 478.952, -1480.34, 798.584, -2000.57, 1798.58, -2001.27, 1761.36, 1918.75, 1197.51, 1943.16, -838.612, 1960.59, -800.17, -239.434, -761.415, -1999.46, -201.416, -1999.86, 278.584, -2000.2, 558.584, -2000.4, 758.584, -2000.54, 478.952, -1480.34, 238.952, -1480.17, 15.3265, -1502.64 )

[node name="LBlkNde" type="Node2D" parent="." groups=[
"Persist",
]]

[node name="MBlkNde" type="Node2D" parent="." groups=[
"Persist",
]]

[node name="SBlkNde" type="Node2D" parent="." groups=[
"Persist",
]]

[node name="CoinsNode" type="Node2D" parent="." groups=[
"Persist",
]]

[node name="Ui" type="Control" parent="."]
margin_top = 1120.0
margin_right = 1082.0
margin_bottom = 1760.0
theme = ExtResource( 7 )
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="Ui"]
process_mode = 0
autostart = true

[node name="Panel" type="Panel" parent="Ui"]
margin_left = -3.0
margin_top = -1117.0
margin_right = 1077.0
margin_bottom = -917.0
custom_styles/panel = ExtResource( 9 )

[node name="Button" type="Button" parent="Ui/Panel"]
margin_left = 22.0
margin_top = 15.0
margin_right = 87.0
margin_bottom = 84.0

[node name="CashLbl" type="Label" parent="Ui"]
margin_left = 197.0
margin_top = -1086.0
margin_right = 341.0
margin_bottom = -1072.0
rect_scale = Vector2( 5, 5 )
text = "$10110101101000101"
align = 1
valign = 1
uppercase = true

[node name="CpSlbd" type="Label" parent="Ui"]
margin_left = 341.0
margin_top = -996.0
margin_right = 485.0
margin_bottom = -982.0
rect_scale = Vector2( 3, 3 )
text = "$10110101101000101"
align = 1
valign = 1
uppercase = true

[node name="ScrollContainer" type="ScrollContainer" parent="Ui"]
margin_top = 245.0
margin_right = 560.0
margin_bottom = 457.0
rect_min_size = Vector2( 560, 200 )
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 7 )
scroll_vertical_enabled = false
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="Ui/ScrollContainer"]
margin_right = 560.0
margin_bottom = 200.0
rect_min_size = Vector2( 560, 200 )
theme = ExtResource( 7 )

[node name="PopupPanel" type="PopupPanel" parent="Ui"]
margin_left = 201.0
margin_top = -725.0
margin_right = 881.0
margin_bottom = -165.0

[node name="Label" type="Label" parent="Ui/PopupPanel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 676.0
margin_bottom = 556.0
rect_scale = Vector2( 5, 5 )
text = "Idle Earnings"
align = 1
valign = 1

[node name="writeME" type="Label" parent="Ui/PopupPanel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 676.0
margin_bottom = 556.0
rect_scale = Vector2( 3.5, 3.5 )
text = "Idle Earnings"
align = 1
valign = 1
autowrap = true

[node name="writeME2" type="Label" parent="Ui/PopupPanel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 676.0
margin_bottom = 556.0
rect_scale = Vector2( 3, 3 )
text = "Click Anywhere To Close"
align = 1
valign = 1
autowrap = true
[connection signal="body_exited" from="SpawnArea/Area2D" to="SpawnArea" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="KillArea/Conveyor" to="KillArea" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="KillArea/Bank" to="KillArea" method="_on_Bank_body_entered"]
[connection signal="timeout" from="KillArea/Bank/Timer" to="KillArea" method="_on_Timer_timeout"]
[connection signal="timeout" from="Ui/Timer" to="Ui" method="_on_Timer_timeout"]
[connection signal="pressed" from="Ui/Panel/Button" to="Ui" method="_on_Button_pressed"]

[editable path="Wheel"]

[editable path="Wheel2"]
